@@ -10,6 +10,7 @@ ispCP ω 1.0.1 Changelog
 2009-04-21 Malte Geierhos
 	- TOOLS:
 		* Fixed #1789: update phpMyAdmin to 3.1.3.2
+		* Fixed #1780: reenabled omega style in filemanager 
 
 2009-04-20 Malte Geierhos
 	- CONFIG FILES:
